--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,12 +4,11 @@ on:
     paths-ignore:
       - "*.md"
 env:
-  DOCKER_REPOSITORY: acouvreur/breach-protocol
   CI: true
 
 jobs:
   build:
-    name: Build, test, Docker artifact and deploy
+    name: Build, test and deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -22,15 +21,6 @@ jobs:
 
       - name: Test
         run: npm test
-
-      - name: Docker build and push
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ env.DOCKER_REPOSITORY }}
-          tag_with_ref: true
-          add_git_labels: true
 
       - name: Deploy to Github Pages
         if: github.ref == 'refs/heads/master'
